@@ -34,6 +34,7 @@ Ver.10 (In Development)
 - Dropbox can set as the container of media files. The context definition in definition file might have
   the 'file-upload' entries and the 'container' key can have the value "Dropbox".
   The paramters for accessing Dropbox is defined in the params.php.
+- Local context 'condition' which sets to the input tag can respond Enter key not only 'text' also other string style elements.
 - [BUG FIX] The lookup feature was not fully efficient, and refactored them.
 - [BUG FIX] When checkbox set to off, the message which someone modified showed unexpectedly.
 - [BUG FIX] After moving from list to detail and back to list page, paging position wasn't retrieve and show the
